--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>LONGFA KEY ACTIVE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link href="/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="/css/app.css">
 </head>
     <body>
@@ -15,7 +15,8 @@
             </div>
             {{> footer}}
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
+        <script src="/libs/js/jquery-3.7.1.min.js"></script>
+        <script src="/libs/bootstrap/js/popper.min.js" ></script>
+        <script src="/libs/bootstrap/js/bootstrap.min.js"></script>
     </body>
 </html>
