--- a/src/resources/views/home/import.hbs
+++ b/src/resources/views/home/import.hbs
@@ -15,7 +15,7 @@
 
     <div class="card">
         <div class="card-body">
-            <form action="/home/import" method="POST" enctype="multipart/form-data">
+            <form action="/import" method="POST" enctype="multipart/form-data">
                 <div class="mb-3">
                     <label for="excelFile" class="form-label">Chọn file Excel</label>
                     <input type="file" class="form-control" id="excelFile" name="excelFile" accept=".xlsx, .xls" required>
