--- a/src/resources/views/home/index.hbs
+++ b/src/resources/views/home/index.hbs
@@ -1,12 +1,12 @@
 <div class="border border-light mt-3 p-5 bg-light">
     <form class="form-inline" action="/search" >
-        <input type="text" name="q" class="form-control mb-2 mr-sm-2" id="search" placeholder="Tìm kiếm">
+        <input type="text" name="q" class="form-control mb-2 mr-sm-2" value="{{searchQuery}}" placeholder="Tìm kiếm">
         <button type="submit" class="btn btn-primary mb-2">Tìm kiếm</button>
     </form>
 </div>
 <form action="/handle-form-actions" name="container-form" method="POST">
     <div class="table-responsive mt-5">
-        <div class="mt-4 mb-3 d-flex align-items-center">
+        {{!-- <div class="mt-4 mb-3 d-flex align-items-center">
             <div class="form-check ">
                 <input class="form-check-input" type="checkbox" value="" id="check-all">
                 <label class="form-check-label" for="check-all">
@@ -18,7 +18,7 @@
                 <option value="delete">Xóa</option>
             </select>
             <button class="btn btn-primary btn-sm btn-check-all-submit" disabled="disabled">Áp dụng</button>
-        </div>
+        </div> --}}
         <table class="table table-bordered">
             <thead>
                 <tr>
