--- a/src/resources/views/home/edit.hbs
+++ b/src/resources/views/home/edit.hbs
@@ -34,6 +34,10 @@
                 <label>Password</label>
                 <input type="text" value="{{keyactive.password}}" name="password" class="form-control">
             </div>
+             <div class="form-group  mt-2">
+                <label>Khóa USB</label>
+                <input type="text" value="{{keyactive.usb}}" name="usb" class="form-control">
+            </div>
             <button type="submit" class="btn btn-primary mt-3 mb-5">Lưu lại</button>
         </form>
     </div>
