--- a/src/resources/views/home/form.hbs
+++ b/src/resources/views/home/form.hbs
@@ -47,7 +47,10 @@
                 <label>Password</label>
                 <input type="text" value="{{keyactive.password}}" name="password" class="form-control">
             </div>
-
+            <div class="form-group  mt-2">
+                <label>Khóa USB</label>
+                <input type="text" value="{{keyactive.usb}}" name="usb" class="form-control">
+            </div>
             <button type="submit" class="btn btn-primary mt-2 mb-5">
                 {{#if isEdit}}Lưu lại {{else}}Thêm mới{{/if}}
             </button>
